# salai

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bench-history.csv  benchmarks.md  deny.toml
benches/: benchmarks.rs  editor_benchmarks.rs
docs/architecture/: overview.md
docs/decisions/: 001-muharrir-migration.md  002-wgpu-backend.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh
src/: audio.rs  editor.rs  expr.rs  hierarchy.rs  hw.rs  inspector.rs  lib.rs  main.rs  personality.rs  picking.rs  scene_edit.rs  texture.rs  viewport.rs  viewport_renderer.rs
src/ui/: animation_panel.rs  asset_browser.rs  console_panel.rs  hierarchy_panel.rs  inspector_panel.rs  menu.rs  mod.rs  personality_panel.rs  profiler_panel.rs  terrain_panel.rs  toolbar.rs  viewport_panel.rs
tests/: integration.rs
