[package]
name = "salai"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Salai — game editor for the Kiran engine"
homepage = "https://github.com/MacCracken/salai"
repository = "https://github.com/MacCracken/salai"
readme = "README.md"
documentation = "https://docs.rs/salai"
keywords = ["editor", "game-engine", "egui", "level-editor"]
categories = ["game-engines", "gui"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
full = []

[dependencies]
# Engine
kiran = { path = "../kiran" }
soorat = { path = "../soorat" }

# UI
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }

# Ecosystem
muharrir = { version = "0.23.4", features = ["full"] }
bhava = "0.23"
dhvani = "0.22"
ranga = "0.24"

# Core
hisab = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "editor_benchmarks"
harness = false

[[bin]]
name = "salai"
path = "src/main.rs"
